# ClariNerd617Backend

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
tests/: test_data_access.py
